<resources>
    <string name="app_name">Book Shop</string>

    <string name="online_book_store">Online Book Store</string>
    <string name="nav_home">Home</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="home_fragment_offer_head">Remaining time until all the amazing offers</string>
    <string name="home_fragment_news_head">The latest books</string>
    <string name="nav_shopping_cart">Shopping Cart</string>
    <string name="login_activity_toolbar">login</string>
    <string name="login_card_header">If you do not have an account , Click Create a new account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="new_account">Create new Account</string>
    <string name="register_activity_toolbar">Register</string>
    <string name="register_card_header">If you have an account, click on Login</string>
    <string name="register_btn">Register</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="toman">IRT</string>
    <string name="show_all">Show All</string>
    <string name="top_publishers">Top Publishers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>