<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/nav_icon_home"
        android:title="@string/nav_home" />


    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/nav_icon_category"
        android:title="@string/nav_categories" />


    <item
        android:icon="@drawable/shopping_cart"
        android:id="@+id/nav_shopping_cart"
        android:title="@string/nav_shopping_cart" />

    <item
        android:icon="@drawable/nav_icon_search"
        android:id="@+id/nav_search"
        android:title="@string/nav_search" />


    <item
        android:icon="@drawable/nav_icon_profile"
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile" />




</menu>