<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">

    <RelativeLayout
        android:id="@+id/loginActivity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolBarColor"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            style="@style/toolbarTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:text="@string/register_activity_toolbar" />


    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="32dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:text="@string/register_card_header"
                android:textDirection="locale" />


            <EditText
                android:id="@+id/registerActivity_edt_user"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/person"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:textDirection="locale" />

            <EditText
android:inputType="textEmailAddress"
                android:gravity="start"
                android:id="@+id/registerActivity_edt_mail"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/email"
                android:drawablePadding="8dp"
                android:hint="@string/mail"
                android:textDirection="locale" />

            <EditText
                android:inputType="phone"
                android:gravity="right"
                android:id="@+id/registerActivity_edt_phone"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="8dp"
                android:hint="@string/phone"
                android:textDirection="locale" />




                <EditText
                    android:inputType="textPassword"
                    android:gravity="right"
                    android:textDirection="locale"
                    android:id="@+id/registerActivity_edt_password"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_edittext"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    />



            <Button
                android:id="@+id/registerActivity_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="48dp"
                android:text="@string/register_btn" />


            <TextView
                android:id="@+id/register_activity_txt_login"
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/login_btn" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>